# privacy_preserving_speech_recognition

./: .gitignore  Dockerfile  README.md  Text_to_Speech.py  deep_streaming.py  deep_wavFile.py  pyproject.toml  record_audio.py
.github/workflows/: docker-image.yml
tests/: test_privacy_preserving_speech_recognition.py
